Fix: contrast error in location section of Schedule page by changing color value

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -693,7 +693,7 @@ main {
 #location h4 {
     text-align: center;
     margin: 20px 10px 5px 10px;
-    color: #137C7C;
+    color: #265255;
 }
 
 #location-container {
